.jjconflict-side-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__bitarray_with_var.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main() {\n  case 5 {\n    z if <<z>> == <<z>> -> Nil\n    _ -> Nil\n  }\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toBitArray;
  
  main =
    { }:
    let
      _pat' = 5;
    in
    if (toBitArray [ _pat' ]) == (toBitArray [ _pat' ]) then
      let
        z = _pat';
      in
      null
    else null;
in
{ inherit main; }
